[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Intro.gd" type="Script" id=1]
[ext_resource path="res://PIXEARG_.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/Land_animal.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
text_sound = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
margin_left = 64.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "Hello there"
align = 1
valign = 1
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 8.0
margin_top = 160.0
margin_right = 51.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "Esc: Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerStart" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerText" type="Timer" parent="."]
wait_time = 0.03

[node name="TimerEnd" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 288, 24 )
can_control = false

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="timeout" from="TimerText" to="." method="_on_TimerText_timeout"]
[connection signal="timeout" from="TimerEnd" to="." method="_on_TimerEnd_timeout"]
